# nsu-oop-labs

lab0/: .gitignore  FileReader.cpp  FileReader.h  ProgramCollector.cpp  ProgramCollector.h  WordCounter.cpp  WordCounter.h  WordSorter.cpp  WordSorter.h  WordWriter.cpp  WordWriter.h  input.txt  lab0.cpp  output.csv  peace.csv  peace.txt
lab1/: BigInt.cpp  BigInt.h  BigInt_tests.cpp  CMakeLists.txt  lab1.cpp  main.cpp
lab2/: CMakeLists.txt  Game.cpp  Game.h  GameRunner.cpp  GameRunner.h  Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  main.cpp
lab2/tests/: test_game.cpp  test_gamerun.cpp  test_strategies.cpp
lab3/: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameConfig.h  GameContext.cpp  GameContext.h  GameObjects.cpp  GameObjects.h  color_test.cpp  main.cpp
lab4/: CMakeLists.txt  CSVParser.h  TuplePrint.h  main.cpp  task1.cpp
lab4/output/: data.csv  test.csv
lab4/tests/: test_csv_parser.cpp  test_tuple_print.cpp
lab4/tests/test_files/: malformed.csv  quotes.csv  simple.csv  wrong_sep.csv
